# OpenSandbox

./: .gitignore  AGENTS.md  README.md
.github/workflows/: dify-plugin-e2e.yml  execd-test.yml  sandbox-k8s-e2e.yml  verify-sandbox-version.yml
components/egress/: README.md  TODO.md  policy_server.go
components/execd/: Dockerfile
examples/: README.md
integrations/dify-plugin/opensandbox/: README.md  main.py  manifest.yaml  privacy.md  pyproject.toml  requirements.txt
integrations/dify-plugin/opensandbox/provider/: opensandbox.py  opensandbox.yaml
integrations/dify-plugin/opensandbox/tests/: __init__.py  test_tools.py
integrations/dify-plugin/opensandbox/tools/: sandbox_create.py  sandbox_create.yaml  sandbox_kill.py  sandbox_kill.yaml  sandbox_run.py  sandbox_run.yaml  utils.py
kubernetes/hack/: pool-perf.py
kubernetes/internal/controller/: allocator.go  allocator_test.go  pool_controller.go
oseps/: 0001-fqdn-based-egress-control.md  0003-volume-and-volumebinding-support.md
scripts/: manage_sandbox_version.py  test_manage_sandbox_version.py
sdks/: eslint.base.mjs
sdks/code-interpreter/javascript/: eslint.config.mjs
sdks/code-interpreter/python/: pyproject.toml
sdks/sandbox/javascript/: eslint.config.mjs
sdks/sandbox/python/: pyproject.toml
server/: .gitignore  .sandbox.e2e.toml  README.md  README_zh.md
server/src/: cli.py
specs/: batch-sandbox.yml  execd-api.yaml  sandbox-lifecycle.yml
tests/e2e/dify_plugin/: .gitignore  README.md  opensandbox.config.toml  prepare_dify_compose.py  run_e2e.py  (+2 more)
tests/javascript/: eslint.config.mjs
(+23 files in other folders)
