[project]
name = "opensandbox-plugin"
version = "0.1.0"
description = "OpenSandbox tool plugin for Dify"
readme = "README.md"
requires-python = ">=3.12"

# uv pip compile pyproject.toml -o ./requirements.txt
dependencies = [
    "dify-plugin>=0.5.1",
    "opensandbox",
    "pydantic>=2.12.3",
    "loguru>=0.7.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ruff>=0.14.2",
]
